Issue #2244387 by wwalc: 3rd party plugins with large icons break the toolbar configurator.

--- a/ckeditor.css
+++ b/ckeditor.css
@@ -170,4 +170,10 @@ fieldset#edit-appearance div#groupLayout, div#allButtons  {
   margin: 1em 0;
   overflow: auto;
 }
+
+fieldset#edit-appearance li.sortableItem img {
+  width: 100%;
+  max-width:16px;
+  height:auto;
+}
 /*  end of toolbar Drag & Drop */
